<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/img_2"
    >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:padding="5dp"
        android:layout_marginBottom="3dp"
        android:fontFamily="@font/font2"
        android:textColor="@color/black"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/portfolio" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="400dp"
        android:layout_height="350dp"
        android:layout_margin="3dp"
        android:contentDescription="@string/todo"
        tools:ignore="ImageContrastCheck"
        android:src="@drawable/ayush" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:fontFamily="@font/font1"
        android:text="AYUSH SAINI" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:fontFamily="@font/font1"
        android:text="@string/android_app_developer" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSkills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:text="@string/skills"
            android:background="#AFEEEE"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"

            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnEd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:text="@string/education"
            android:background="#AFEEEE"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"


            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAchievements"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="15sp"
            android:text="@string/achievements"
            android:textSize="20sp"
            android:background="#AFEEEE"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

    </LinearLayout>

</LinearLayout>

